# eHacks2023

./: README.md  addEmployee.py  comm.py  main.py  upload.py
dbms/: comm.js  comm.py  oliverReadMe.txt
facialDetect1/: CMakeLists.txt  ReadMe.md  main.cpp
pythonUploaded/: upload.py
